HAR-45: Add image upload in handlers, update swagger.
