# docs/swagger.json
@@ -225,6 +225,68 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "description": "Create pin by description",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Pins"
+                ],
+                "summary": "Create pin",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "session-token=",
+                        "description": "session-token",
+                        "name": "Cookie",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Pin information in json",
+                        "name": "pin",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "file",
+                        "description": "Pin image",
+                        "name": "image",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entity.PinPageResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Possible code responses: 3, 4, 15, 18.",
+                        "schema": {
+                            "$ref": "#/definitions/errs.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Possible code responses: 2.",
+                        "schema": {
+                            "$ref": "#/definitions/errs.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Possible code responses: 11.",
+                        "schema": {
+                            "$ref": "#/definitions/errs.ErrorResponse"
+                        }
+                    }
+                }
             }
         },
         "/pins/created/{nickname}": {
@@ -580,7 +642,7 @@
             "post": {
                 "description": "Update user by description and user id.",
                 "consumes": [
-                    "application/json"
+                    "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
@@ -591,13 +653,24 @@
                 "summary": "Update user",
                 "parameters": [
                     {
-                        "description": "User information",
+                        "type": "string",
+                        "default": "session-token=",
+                        "description": "session-token",
+                        "name": "Cookie",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "User information in json",
                         "name": "user",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/entity.User"
-                        }
+                        "in": "formData"
+                    },
+                    {
+                        "type": "file",
+                        "description": "User avatar",
+                        "name": "image",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -608,7 +681,7 @@
                         }
                     },
                     "400": {
-                        "description": "Possible code responses: 3, 4, 5, 12, 13",
+                        "description": "Possible code responses: 3, 4, 5, 12, 13, 18",
                         "schema": {
                             "$ref": "#/definitions/errs.ErrorResponse"
                         }
@@ -671,10 +744,6 @@
                     "type": "boolean"
                 },
                 "click_url": {
-                    "type": "string"
-                },
-                "content_url": {
-                    "description": "Сделать required для свагера",
                     "type": "string"
                 },
                 "description": {
