# internal/handler/user.go
@@ -4,7 +4,6 @@ import (
 	"encoding/json"
 	"harmonica/internal/entity"
 	"harmonica/internal/entity/errs"
-	"io"
 	"net/http"
 
 	"golang.org/x/crypto/bcrypt"
@@ -16,10 +15,12 @@ import (
 //	@Description	Update user by description and user id.
 //	@Tags			Users
 //	@Produce		json
-//	@Accept			json
-//	@Param			user	body		entity.User	true	"User information"
+//	@Accept			multipart/form-data
+//	@Param			Cookie	header		string	true	"session-token"	default(session-token=)
+//	@Param			user	formData	string	false	"User information in json"
+//	@Param			image	formData	file	false	"User avatar"
 //	@Success		200		{object}	entity.PinPageResponse
-//	@Failure		400		{object}	errs.ErrorResponse	"Possible code responses: 3, 4, 5, 12, 13"
+//	@Failure		400		{object}	errs.ErrorResponse	"Possible code responses: 3, 4, 5, 12, 13, 18"
 //	@Failure		401		{object}	errs.ErrorResponse	"Possible code responses: 2."
 //	@Failure		403		{object}	errs.ErrorResponse	"Possible code responses: 14."
 //	@Failure		500		{object}	errs.ErrorResponse	"Possible code responses: 6, 11."
@@ -44,17 +45,23 @@ func (h *APIHandler) UpdateUser(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	bodyBytes, err := io.ReadAll(r.Body)
-	if err != nil {
-		WriteErrorResponse(w, h.logger, errs.ErrorInfo{
-			GeneralErr: err,
-			LocalErr:   errs.ErrReadingRequestBody,
-		})
-		return
+	var user entity.User
+
+	image, imageHeader, err := r.FormFile("image")
+	if err == nil {
+		name, errUploading := h.service.UploadImage(ctx, image, imageHeader)
+		if errUploading != nil {
+			WriteErrorResponse(w, h.logger, errs.ErrorInfo{
+				GeneralErr: err,
+				LocalErr:   errs.ErrInvalidImg,
+			})
+			return
+		}
+		user.AvatarURL = FormImgURL(name)
 	}
 
-	var user entity.User
-	err = json.Unmarshal(bodyBytes, &user)
+	userParams := r.FormValue("user")
+	err = json.Unmarshal([]byte(userParams), &user)
 	if err != nil {
 		WriteErrorResponse(w, h.logger, errs.ErrorInfo{
 			GeneralErr: err,
@@ -63,7 +70,6 @@ func (h *APIHandler) UpdateUser(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 	user.UserID = userIdFromSession
-
 	if user.Nickname != "" && !ValidateNickname(user.Nickname) {
 		WriteErrorResponse(w, h.logger, errs.ErrorInfo{
 			LocalErr: errs.ErrInvalidInputFormat,
@@ -94,6 +100,5 @@ func (h *APIHandler) UpdateUser(w http.ResponseWriter, r *http.Request) {
 		WriteErrorResponse(w, h.logger, errInfo)
 		return
 	}
-
 	WriteUserResponse(w, h.logger, updatedUser)
 }
